@@ -114,6 +114,8 @@ In alphabetical order (by last name)
 ** Patch for file mappings for rspec/autotest integration
 * James Edward Gray II
 ** Patch to improve syntax highlighting in TextMate
+* Corey Haines
+** Patch [#343] include_text matcher for rails
 * Coda Hale
 ** Patch [#279] Autotest never calls the :red hook
 * Kyle Hargraves
