@@ -1,7 +1,7 @@
 module Spec
   module Rails
     module VERSION #:nodoc:
-      BUILD_TIME_UTC = 20080309210001
+      BUILD_TIME_UTC = 20080316231210
     end
   end
 end
